# clog-backend

./: .dockerignore  .env.backup  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
alembic/: README.md  env.py
alembic/versions/: .gitkeep  2026_06_09_1156-c3f45b4553f4_add_users_table.py  2026_07_01_0128-80a20ce6a199_add_likes_table.py  2026_07_01_0723-ed79812163d4_add_comments_table.py  2026_07_01_1241-df4bd125be8c_add_comment_likes_table.py  2026_07_03_1542-22d5a8accf04_sync_schema_comments_and_indexes.py  2026_07_04_0039-35accf3ca108_add_notifications_table.py  2026_07_05_1309-57264df634d9_add_media_status_and_original_media_url_.py  2026_07_06_0251-984d9793e746_add_서울숲클라이밍_to_gym_seed.py  2026_07_06_0801-6f3e3f92d02f_fix_손상원클라이밍_color_order.py  2026_07_06_0821-c5cd9412990b_add_follows_table.py  2026_07_06_0827-24bfca186a74_notifications_climbing_log_id_nullable.py  2026_07_07_0858-98e3721d6e9a_add_email_verified_to_users.py  2026_07_08_1000-7a1f9c2b4e8d_add_is_banned_to_users.py  2026_07_12_0205-13c55e5c6909_add_status_to_follows.py  2026_07_15_0610-ef96f2ae7b85_add_brand_name_to_gym_grade_systems.py  a1b2c3d4e5f6_add_is_public_to_users.py  b2c3d4e5f6a7_add_local_auth_fields_to_users.py  c3d4e5f6a7b8_add_climbing_logs_table.py  d4e5f6a7b8c9_add_gym_grade_systems.py
app/: main.py  worker.py
app/api/: dependencies.py  exception_handlers.py
app/api/routes/: auth.py  climbing.py  comment_likes.py  comments.py  follows.py  grade.py  gym_grade_systems.py  health.py  likes.py  media.py  notifications.py  users.py
app/core/: config.py  email.py  logging.py  password.py  rate_limit.py  security.py
app/domain/auth/: __init__.py  dependencies.py  exceptions.py  (+9 more)
app/scripts/: media_reconcile.py
scripts/: _ci_notify_test.py  verify_account_delete.py  verify_admin_ban.py  verify_admin_delete.py  verify_admin_gym.py  verify_feed_follower_access.py  verify_feed_hides_deleted_author.py  verify_follow_approval.py  verify_follow_cleanup_on_delete.py  verify_grade_formula.py  verify_gym_brand.py  verify_gym_ranking.py  verify_media_status_excluded_from_grade.py  verify_password_change.py  verify_password_reset.py  verify_popular_categories.py  verify_private_account_feed.py  verify_remove_follower.py  verify_update_refresh_fix.py  verify_user_browse.py  verify_user_search.py
tests/: test_db.py  test_health.py  test_users_api.py
(+63 files in other folders)
