[project]
name = "clog-backend"
version = "0.1.0"
description = "Clog - 클라이밍 기록 + 커뮤니티 백엔드"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "miginho", email = "jinhoya89@gmail.com" }
]
dependencies = [
    # FastAPI core
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Settings & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",       # FastAPI 테스트 클라이언트용
    "ruff>=0.7.0",          # 린터 + 포맷터
    "mypy>=1.13.0",         # 타입 체크
]

[tool.uv]
package = false  # 라이브러리 아닌 애플리케이션

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length는 formatter가 처리

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
