[project]
name = "clog-backend"
version = "0.1.0"
description = "Clog - 클라이밍 기록 + 커뮤니티 백엔드"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "miginho", email = "jinhoya89@gmail.com" }
]
dependencies = [
    # FastAPI core
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Settings & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Logging
    "structlog>=24.4.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # JWT
    "python-jose[cryptography]>=3.3.0",

    # Redis
    "redis>=5.2.0",

    # HTTP 클라이언트 (Day 12)
    "httpx>=0.27.0",

    # Rate limiting (Day 14 ⭐ 추가)
    # slowapi: FastAPI 친화 + Redis 백엔드 지원
    "slowapi>=0.1.9",
    "starlette-prometheus>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "asyncpg-stubs>=0.30.0",
    "types-python-jose>=3.3.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
